Sandbox/02-12-2025/force-app/main/default/objects/Publisher_Monthly_Global__c/Publisher_Monthly_Global__c.object-meta.xml
<CustomObject>
    <label>Publisher Monthly Global</label>
    <nameField>
        <label>Publisher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publisher Monthly Global</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>