Sandbox/02-12-2025/force-app/main/default/objects/Publisher_Monthly_Global__c/fields/Data_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Publisher Monthly Global</relationshipLabel>
    <relationshipName>Publisher_Monthly_Global</relationshipName>
    <type>Lookup</type>
</CustomField>