Sandbox/02-12-2025/force-app/main/default/objects/Publisher_Monthly_Global__c/listViews/KAlaydo.listView-meta.xml
<ListView>
    <fullName>KAlaydo</fullName>
    <columns>Date__c</columns>
    <columns>Calls__c</columns>
    <columns>Uniques__c</columns>
    <columns>Country_Raw__c</columns>
    <columns>Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>5/1/2015</value>
    </filters>
    <label>Kalaydo</label>
</ListView>